--- a/index.html
+++ b/index.html
@@ -1,23 +1,130 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SEAF</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>SEAF</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <a class="logo header__logo" href="#"
+            ><img class="logo__img" src="images/logo.png" alt="logo"
+          /></a>
+          <nav class="header__nav nav">
+            <ul class="nav__list">
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">О нас</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">Продукция</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">Почему мы</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">Рецепты</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">История</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link" href="#">Оптовикам</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="header__phone" href="tel:77088309600"
+            ><img
+              class="header__phone-img"
+              src="images/phone-icon.svg"
+              alt="phone"
+          /></a>
+        </div>
+      </div>
+      <div class="header__content">
+        <div class="container">
+          <h1 class="header__content-title">Морепродукты из Норвегии</h1>
+          <div class="header__content-slider header__slider">
+            <div class="header__slider-item header__item">
+              <p class="header__item-text">
+                Норвежские морепродукты уникальны, потому что они выращиваются
+                экологически рациональным образом, основываясь на знаниях и
+                опыте многих поколений, заботясь об океане и будущих поколениях.
+              </p>
+              <p class="header__item-text">
+                Ежедневно во всем мире подают несколько миллионов норвежских
+                блюд из морепродуктов.
+              </p>
+            </div>
+            <div class="header__slider-item header__item">
+              <p class="header__item-text">
+                Норвежские морепродукты уникальны, потому что они выращиваются
+                экологически рациональным образом, основываясь на знаниях и
+                опыте многих поколений, заботясь об океане и будущих поколениях.
+              </p>
+              <p class="header__item-text">
+                Ежедневно во всем мире подают несколько миллионов норвежских
+                блюд из морепродуктов.
+              </p>
+            </div>
+            <div class="header__slider-item header__item">
+              <p class="header__item-text">
+                Норвежские морепродукты уникальны, потому что они выращиваются
+                экологически рациональным образом, основываясь на знаниях и
+                опыте многих поколений, заботясь об океане и будущих поколениях.
+              </p>
+              <p class="header__item-text">
+                Ежедневно во всем мире подают несколько миллионов норвежских
+                блюд из морепродуктов.
+              </p>
+            </div>
+            <div class="header__slider-item header__item">
+              <p class="header__item-text">
+                Норвежские морепродукты уникальны, потому что они выращиваются
+                экологически рациональным образом, основываясь на знаниях и
+                опыте многих поколений, заботясь об океане и будущих поколениях.
+              </p>
+              <p class="header__item-text">
+                Ежедневно во всем мире подают несколько миллионов норвежских
+                блюд из морепродуктов.
+              </p>
+            </div>
+            <div class="header__slider-item header__item">
+              <p class="header__item-text">
+                Норвежские морепродукты уникальны, потому что они выращиваются
+                экологически рациональным образом, основываясь на знаниях и
+                опыте многих поколений, заботясь об океане и будущих поколениях.
+              </p>
+              <p class="header__item-text">
+                Ежедневно во всем мире подают несколько миллионов норвежских
+                блюд из морепродуктов.
+              </p>
+            </div>
+          </div>
+          <a class="header__content-button" href="#">ВЫБРАТЬ</a>
+          <div class="header__content-box">
+            <a class="header__content-link header__content-link_active" href="#">RU</a>/
+            <a class="header__content-link" href="#">EN</a>
+          </div>
+        </div>
+      </div>
+    </header>
 
-  
-  
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
